--- a/public/css/flocc.css
+++ b/public/css/flocc.css
@@ -239,7 +239,10 @@ ul.events {
 }
 
 ul.events li {
-    display: inline-block;
+    display: block;
+    width: 200px;
+    height: 210px;
+    float: left;
     border: 1px solid #9d9d9d;
     border-radius: 5px;
     padding: 20px 10px;
