Możliwość oznaczenia wiadomości jako ważna (pojawia się na górze wyników)

--- a/public/css/flocc.css
+++ b/public/css/flocc.css
@@ -337,3 +337,7 @@ ul#places_route li i {
 #time_line li:last-child {
     border-bottom: 0;
 }
+
+.mails .important td {
+    background: #ffbcb5;
+}
