--- a/public/css/flocc.css
+++ b/public/css/flocc.css
@@ -224,7 +224,7 @@ body {
 
 .footer {
     background-color: #424242;
-    color: ivory;
+    color: #dddddd;
     font-weight: 300;
     padding-top: 10px;
 }
@@ -317,4 +317,12 @@ ul#places_route li i {
 
 #newActivity {
     display: none;
+}
+
+.grad {
+  background: #424242; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, #424242, royalblue); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #424242, royalblue); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #424242, royalblue); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #424242, royalblue); /* Standard syntax */
 }
