--- a/public/css/flocc.css
+++ b/public/css/flocc.css
@@ -363,3 +363,8 @@ ul#places_route li i {
   background: -moz-linear-gradient(bottom right, #424242, royalblue); /* For Firefox 3.6 to 15 */
   background: linear-gradient(to bottom right, #424242, royalblue); /* Standard syntax */
 }
+
+.avatar {
+    width: 50px;
+    height: 50px;
+}
